resolved fdo#60078 correctly calculate IMCSCH and IMSECH

For the transformation used see
http://de.wikipedia.org/wiki/Sekans_Hyperbolicus_und_Kosekans_Hyperbolicus#Komplexes_Argument
(German only)

Change-Id: If502b7333308069d7fcbe09e954b26ce8b7268b6